snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.153923-2-all.jar.sha512
f9399e376453f97e879934b523c89b43ed65489a8db8da1a2830dfe11d829028f4006b640325ad8efe32a8cd8889b08ed0b85afc389854e922576814e27d5028